<b>Version 1.07:</b> First beta build :)<br/><br/>
    &#8226; View replies to your tweet on the discussions panel of the tweet viewer<br/>
    &#8226; Better support for image loading on timelines<br/>
    &#8226; Added translation (Hungarian, Brazilian Portuguese)<br/>
    &#8226; Fix for multiple accounts<br/><br/>
<br/>

<b>Version 1.06:</b><br/><br/>
    &#8226; Huge expansion of notification options<br/>
    &#8226; Fixed links when sharing or quoting a tweet<br/>
    &#8226; Fixed the tweets being constrained to 139 chars<br/>
    &#8226; Fixed the action bar showing the "links" title at incorrect times<br/>
    &#8226; Much better support for blind users<br/>
    &#8226; Play store crash report fixes<br/><br/>
<br/>

<b>Version 1.05:</b> Features, crashes, and more bugs :)<br/><br/>
    &#8226; Correctly mute retweets<br/>
    &#8226; Higher quality images on timeline<br/>
    &#8226; Dismiss all on interactions drawer<br/>
    &#8226; In-app browser is now optional<br/>
    &#8226; Lowered swipe length for Pull to Refresh<br/>
    &#8226; Option to display both screenname and name on timeline tweets<br/>
    &#8226; Open app from clicking icon on widget<br/>
    &#8226; Finished German translation<br/>
    &#8226; Fixed contact images on layout change<br/>
    &#8226; Attempted fixes for Play Store crash reports<br/><br/>
<br/>

<b>Version 1.01:</b> Bug here, bug there. Some nice fixes :)<br/><br/>
    &#8226; Should fix the problem with Talon Pull not working right for some<br/>
    &#8226; Fix problems with tweets being saved twice<br/><br/>
<br/>

<b>Version 1.00:</b> Ahh finally a release, and a huge update along with it.<br/><br/>
    &#8226; "Talon Pull" for push notifications and live streaming... AWESOME feature :) <br/>
    &#8226; Added a very powerful 'Theme Engine' for developers (https://github.com/lklinker/talon_theme)<br/>
    &#8226; Added live streaming to the main timeline<br/>