@@ -33,6 +33,13 @@
             android:defaultValue="true"
             />
 
+        <CheckBoxPreference
+            android:key="prefer_rt"
+            android:title="@string/rt_style_quotes"
+            android:summary="@string/rt_style_quotes_summary"
+            android:defaultValue="false"
+            />
+
     </PreferenceCategory>
 
     <PreferenceCategory
