@@ -1,6 +1,7 @@
 <b>Version 1.07:</b> First beta build :)<br/><br/>
     &#8226; View replies to your tweet on the discussions panel of the tweet viewer<br/>
     &#8226; Better support for image loading on timelines<br/>
+    &#8226; Option to use old style RT for quotes instead of current method (under advanced settings)<br/>
     &#8226; Added translation (Hungarian, Brazilian Portuguese)<br/>
     &#8226; Fix for multiple accounts<br/><br/>
 <br/>
